<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/app_padding"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/editTextNoType"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_no_type"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextUri"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_uri"
            android:inputType="textUri"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNoType" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUri" />

        <EditText
            android:id="@+id/editTextSubject"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email_subject"
            android:inputType="textEmailSubject"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

        <EditText
            android:id="@+id/editTextShortMessage"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_short_message"
            android:inputType="textShortMessage"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSubject" />

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextShortMessage" />

        <EditText
            android:id="@+id/editTextArea"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:ems="10"
            android:hint="@string/hint_text_multi_line"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:gravity="top"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPersonName" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextArea" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_number_password"
            android:inputType="numberPassword"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

        <EditText
            android:id="@+id/editTextPostalAddress"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_postal_address"
            android:inputType="textPostalAddress"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_time"
            android:inputType="time"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPostalAddress" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_date"
            android:inputType="date"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

        <EditText
            android:id="@+id/editTextNoSuggestions"
            android:layout_width="@dimen/dp_fill_container"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_no_suggestions"
            android:inputType="textNoSuggestions"
            android:minHeight="@dimen/db_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>